--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <configuration>
-                	<parallel>classes</parallel>
+                	<parallel>methods</parallel>
           			<threadCount>100</threadCount>
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
                 </configuration>
