--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <configuration>
+			<argLine>-Xms1024m -Xmx4096m -XX:PermSize=1024m</argLine>
                 	<parallel>classesAndMethods</parallel>
           			<useUnlimitedThreads>true</useUnlimitedThreads>
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
