--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.9.10</version>
@@ -27,7 +21,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.53.1</version>
+            <version>3.14.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -41,6 +35,11 @@
             <artifactId>sauce_testng</artifactId>
             <version>2.1.23</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
         </dependency>
 
     </dependencies>
@@ -58,12 +57,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>2.22.0</version>
                 <configuration>
-			<argLine>-Xms1024m -Xmx4096m -XX:PermSize=1024m</argLine>
-                	<parallel>classesAndMethods</parallel>
-          			<useUnlimitedThreads>true</useUnlimitedThreads>
-                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                    <properties>
+                        <property>
+                            <name>parallel</name>
+                            <value>methods</value>
+                        </property>
+                        <property>
+                            <name>threadCount</name>
+                            <value>100</value>
+                        </property>
+                        <property>
+                            <name>dataproviderthreadcount</name>
+                            <value>100</value>
+                        </property>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
