switch to 2 classes with exactly same test, fix threadcount property

--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                             <value>methods</value>
                         </property>
                         <property>
-                            <name>threadCount</name>
+                            <name>threadcount</name>
                             <value>100</value>
                         </property>
                         <property>
